# yumi_ros

./: README.md
gazebo_mimic/: CMakeLists.txt
gazebo_mimic/src/gazebo_mimic_plugin/: mimic_plugin.cpp
yumi_cameras/: CMakeLists.txt  package.xml
yumi_cameras/CameraJobs/: Default.job  L_CaptureAndFTP.job  R_CaptureAndFTP.job
yumi_cameras/rapid/: TCameraMain.mod
yumi_cameras/scripts/: ROS_cameras_FTP_server.py  standalone_verbose_FTP_server.py
yumi_cameras/src/: rws_continuous_trigger.cpp
yumi_control/config/: position_controllers.yaml  traj_controllers.yaml
yumi_description/: yumi.rviz
yumi_description/urdf/: yumi.gv  yumi.urdf  yumi.urdf.xacro
yumi_hw/: CMakeLists.txt  package.xml
yumi_hw/config/: egm_rws_config.yaml
yumi_hw/include/yumi_hw/: yumi_gripper_node.h  yumi_hw_egm.h  yumi_hw_rws.h
yumi_hw/scripts/: gazebo_grippers_remap.py
yumi_hw/src/: grippers_hw.cpp  yumi_hw.cpp  yumi_hw_egm.cpp  yumi_hw_ifce_node.cpp  yumi_hw_rws.cpp
yumi_launch/: CMakeLists.txt
yumi_launch/launch/: yumi_gazebo_pos_control.launch  yumi_gazebo_traj_pos_control.launch  yumi_gazebo_traj_vel_control.launch  yumi_gazebo_vel_control.launch  yumi_pos_control.launch  yumi_traj_pos_control.launch  yumi_traj_vel_control.launch  yumi_vel_control.launch
yumi_motion_api/: CMakeLists.txt  package.xml  setup.py
yumi_motion_api/nodes/: yumi_motion_api_node.py
yumi_moveit_config/: package.xml
yumi_moveit_config/config/: controllers.yaml  kinematics.yaml  ros_controllers.yaml  yumi.srdf
yumi_moveit_config/launch/: move_group.launch  moveit.rviz  myLaunch.launch  planning_context.launch  planning_pipeline.launch.xml  trajectory_execution.launch.xml
yumi_support/: CMakeLists.txt
yumi_test_controllers/: CMakeLists.txt  rqtGUI_TrajControlJoints_EffortControlGrippers.perspective
yumi_test_controllers/src/: test_vel_control.cpp
