<?xml version="1.0"?>
<package>
	<name>yumi_cameras</name>
	<version>0.1.0</version>
	<description>YuMi Cameras ROS node</description>


	<maintainer email="yoshua@kth.se">Yoshua Nava</maintainer>

	<license>BSD</license>

	<author>Yoshua Nava</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>

	<run_depend>roscpp</run_depend>

</package>